- 251: A report module
- 250: Server time in scheduler interface
- 249: Extraction of user and group rights when crawling CIFS/SMB and FTP
- 248: Upgrade ZK CE to 6.5
- 247: Support of additional characters in LetterOrDigitTokenizer
- 246: Named entity recognition based on a search request
- 245: Highlighting in PDF documents and images (OCR)
- 243: RSS Parser

Bug fixes:
- 183: maxClauseCount is set to 1024 when deleting large collection
- 178: Error reading 'fieldOrSnippetList' on type RendererController
- 170: Wrong file path in file crawler
- 169: java.lang.NullPointerException on flush expired contend from cache
- 168: Screenshot function not working
- 167: java.lang.NullPointerException on enabling crawler cache
- 166: Query -> More like This causes  Property 'name' not found on type java.lang.String
- 165: Not possible to copy an address in Crawler -> Web -> Pattern List
- 163: Weight is ignored in query scoring item
- 161: ParseException while crawling files

OpenSearchServer 1.3.1

New features:
- 244: Exportable autocompletion index
- 242: Be able to run only one crawl session
- 240: Several HTML parser configuration per index

Bug fixes:
- 158: File crawler infinite loop while crawling FTP directory
- 157: NullPointerException while deleting documents from web crawler
- 156: Cannot forcefully unlock a NativeFSLock error
- 155: Trigger name cannot be null error when clicking optimize
- 153: Failed replication from Windows to Linux because of file separator

OpenSearchServer 1.3

New features:
- 238: Job called when crawl session ends
- 237: Transaction isolation level should editable
- 236: Default value in the Classifier
- 235: Named entity recognition
- 234: Free text submission to MoreLikeThis query
- 233: Add deletion support in XML indexation
- 232: FTP feed XML task
- 231: Autocompletion API
- 230: Dropbox indexation
- 228: Group all token filter
- 227: Squared Geographical Filter
- 226: Json Path filter
- 225: Degrees to radians converter