@@ -1,8 +1,8 @@
 # File used by hudson to manage publication
-VERSION=1.4-rc0
+VERSION=1.4
 
 # STAGE options are "developer", "beta" or "stable"
-STAGE=stable
+STAGE=developer
 
 # PUBLISH_SOURCEFORGE options are 1 or 0
-PUBLISH_SOURCEFORGE=1
+PUBLISH_SOURCEFORGE=0
