@@ -24,6 +24,7 @@ New features:
 - 243: RSS Parser
 
 Bug fixes:
+- 184: NullPointerException on SnippetField.copySnippetFields
 - 183: maxClauseCount is set to 1024 when deleting large collection
 - 178: Error reading 'fieldOrSnippetList' on type RendererController
 - 170: Wrong file path in file crawler
